fixing centering on mobile, and added Owler/BofA update

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     line-height: 1.25;
     font-family: 'Roboto', sans-serif;
     margin-top:0px;
-    margin-left:30px;
+    margin-left:20px;
     margin-right:20px;
 }
 
